# muse

./: .Rbuildignore  .Rprofile  .gitignore  2026-06-04-tasks.txt  ARCHITECTURE.md  CLAUDE.md  CRAN-SUBMISSION  DESCRIPTION  NAMESPACE  NEWS  PYTHON_PORT.md  README.md  cran-comments.md  main.R  muse.Rproj  x.Rdata  y.txt
.github/workflows/: R-CMD-check.yaml  build-release-wheels.yml  python-check.yaml  release.yml  rhub.yaml
R/: INTLEVEL.R  MSOEfunctions.R  PTSS3functions.R  PTSfunctions.R  RcppExports.R  ctll.R  methods.R  muse-package.R  pts-accuracy.R  pts-confint.R  pts-internals.R  pts-methods-accessors.R  pts-methods-diagnostics.R  pts-pls.R  pts-simulate.R  pts-summary.R  pts-translate.R  pts-update.R  pts.R  zzz.R
doc/: guerrero.md  lambda-references.bib
experiments/: loss_surface_1gt.R
man/: MSOE.Rd  MSOEcomponents.Rd  MSOEestim.Rd  MSOEfilter.Rd  MSOEmodel.Rd  MSOEsetup.Rd  MSOEsmooth.Rd  MSOEvalidate.Rd  PTS.Rd  PTS2modelUC.Rd  PTScomponents.Rd  PTSestim.Rd  PTSforecast.Rd  PTSmodel.Rd  PTSsetup.Rd  PTSvalidate.Rd  ctll.Rd  fitted.Rd  initials.Rd  modelUC2PTS.Rd  modelUC2arma.Rd  muse.Rd  plot.Rd  print.Rd  pts-methods.Rd  pts.Rd  reexports.Rd  residuals.Rd  size.Rd  smooth.Rd  summary.Rd
man-roxygen/: authors.R
python/: .gitignore  CMakeLists.txt  NEWS.md  PYTHON_PORT.md  README.md  build_spike.sh  pyproject.toml
python/src/muse/: __init__.py
python/src/muse/core/: boxcox.py  forecaster.py  io.py  lambda_screen.py  pts.py  selector.py  translate.py
python/tests/: dump_diag_reference.R  dump_forecast_reference.R  dump_outlier_reference.R  dump_pts_reference.R  dump_reference.R  dump_summary_reference.R  test_diag_parity.py  test_engine_parity.py  test_forecast_parity.py  test_functionality.py  test_outlier_parity.py  test_pts_parity.py  test_summary_parity.py
src/: .gitignore  ARMAmodel.h  CTLEVELmodel.h  DJPTtools.h  INTLEVELcpp2R.cpp  INTLEVELmodel.h  MSOEc.cpp  MSOEmodel.h  Makevars  PTSmodel.h  RcppExports.cpp  SSpace.h  SSpaceTV.h  bcnorm.h  boxcox.h  ctllSim.cpp  muse_compat.h  musecore.h  musecpp2R.cpp  optim.h  stats.h
src/python/: musecpp2py.cpp
tests/: testthat.R
tests/testthat/: test_PTS.R  test_PTSsetup.R  test_ctll.R  test_pts.R  test_pts_methods.R  test_stress.R
tools/: characterize.R
vignettes/: pts.R  pts.Rmd  pts.md
