[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11>=2.6", "numpy>=1.20"]
build-backend = "scikit_build_core.build"

[project]
name = "muse"
version = "0.0.2"
description = "Power / Trend / Seasonal (PTS) multiple-source-of-error state-space models"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ivan Svetunkov", email = "ivan@svetunkov.com" }]
license = { text = "LGPL-2.1" }
keywords = ["forecasting", "time-series", "state-space", "box-cox", "PTS"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
]

[project.optional-dependencies]
# msdecompose (the lambda screen) and measures (accuracy) come from the
# sibling smooth / greybox Python packages.  Installed editable in dev; not
# yet on PyPI, so kept optional here.
selection = ["smooth"]
accuracy = ["greybox"]
test = ["pytest"]

[tool.scikit-build]
cmake.version = ">=3.16"
cmake.build-type = "Release"
wheel.packages = ["src/muse"]
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
# nothing project-specific yet
